--- a/src/app/views/settings/change-password/change-password.component.html
+++ b/src/app/views/settings/change-password/change-password.component.html
@@ -1,1 +1,28 @@
-<p>change-password works!</p>
+<form action="">
+    <div class="mb-3">
+        <app-base-label-component for="oldPassword" classes="form-label" [required]="true"> {{'oldPassword' | translate}} </app-base-label-component>
+        <input type="password" [formControl]="oldPassword" class="form-control" id="oldPassword"/>
+        @if (oldPassword.invalid && oldPassword.touched) {
+            <app-input-validation-alert-component> {{'errors.required' | translate}}
+            </app-input-validation-alert-component>
+        }
+    </div>
+    <div class="mb-3">
+        <app-base-label-component for="newPassword" classes="form-label" [required]="true"> {{'newPassword' | translate}} </app-base-label-component>
+        <input type="password" [formControl]="newPassword" class="form-control" id="newPassword"/>
+        @if (newPassword.invalid && newPassword.touched) {
+            <app-input-validation-alert-component> {{'errors.password' | translate}}
+            </app-input-validation-alert-component>
+        }
+    </div>
+    <div class="mb-3">
+        <app-base-label-component for="confirmPassword" classes="form-label" [required]="true"> {{'confirmPassword' | translate}} </app-base-label-component>
+        <input type="password"[formControl]="confirmPassword" class="form-control" id="confirmPassword"/>
+        @if (confirmPassword.touched && newPassword.value !== confirmPassword.value) {
+            <app-input-validation-alert-component> {{'errors.confirmPassword' | translate}}
+            </app-input-validation-alert-component>
+        }
+    </div>
+    <app-base-button-component [disabled]="!formIsValid" [loading]="isLoading()" (clicked)="submit()" classes="px-5 btn-primary rounded-pill white_color font_size__14 shadow-sm"> {{
+        'save' | translate }} </app-base-button-component>
+</form>
