--- a/src/app/components/views-components/statistics/statistic-card/statistic-card.component.html
+++ b/src/app/components/views-components/statistics/statistic-card/statistic-card.component.html
@@ -1,11 +1,12 @@
 <div class="rounded-4 p-3 h-100" [class]="classes()" [style.background-color]="background()">
-    <div class="d-flex">
-        <aside class="flex-fill">
+    <div>
+        <div class="d-flex justify-content-between align-items-center">
             <p class="my-4 font_size__13 pe-3"> {{title() | translate}} </p>
-        </aside>
-        <aside class="text-end">
             <p-avatar icon="pi pi-{{icon()}}" styleClass="mr-2" size="large"
                 [style]="{ 'background-color':iconBg(), color: iconColor() }" shape="circle" />
+        </div>
+        <aside class="text-end">
+            
             <p class="h6 mt-3"> {{value()}} </p>
         </aside>
     </div>
