--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -4,10 +4,15 @@
             <aside class="col-lg-2">
                 <app-dashboard-sidebar></app-dashboard-sidebar>
             </aside>
-            <aside class="col-lg-10 d-flex flex-column justify-content-center align-items-center">
-                <div class="py-5 col-md-11 col-12 mx-auto">
-                    <div [@slideInOutAnimation]="getRouteAnimationData()">
-                        <router-outlet></router-outlet>
+            <aside class="col-lg-10">
+                <div class="d-flex flex-column flex-wrap py-4 col-md-11 h-100 col-12 mx-auto">
+                    <div class="col-12 mb-4">
+                        <app-top-bar></app-top-bar>
+                    </div>
+                    <div class="d-flex align-items-center flex-fill">
+                        <div class=" col-12" [@slideInOutAnimation]="getRouteAnimationData()">
+                            <router-outlet></router-outlet>
+                        </div>
                     </div>
                 </div>
             </aside>
