--- a/src/app/components/base-components/base-logo-component/base-logo-component.component.html
+++ b/src/app/components/base-components/base-logo-component/base-logo-component.component.html
@@ -1,3 +1,3 @@
 <app-base-link-component classes="justify-content-center" path="/">
-    <!-- <app-base-image-component path="logo/logo.svg" alt="logo"></app-base-image-component> -->
+    <app-base-image-component path="logo/logo.svg" alt="logo"></app-base-image-component>
 </app-base-link-component>
