--- a/src/app/views/auth/login/login.component.html
+++ b/src/app/views/auth/login/login.component.html
@@ -14,7 +14,7 @@
     <div class="mb-2">
         <app-base-label-component for="passwordInput" classes="form-label d-block" [required]="true"> {{'password' |
             translate}} </app-base-label-component>
-        <p-password [formControl]="password" styleClass="w-100" [feedback]="false" [toggleMask]="true" inputStyleClass="form-control"
+        <p-password [formControl]="password" [inputStyle]="{'text-align': 'right', 'direction': 'ltr'}" styleClass="w-100" [feedback]="false" [toggleMask]="true" inputStyleClass="form-control"
             inputId="passwordInput" />
         @if(password.invalid && password.touched){
         <app-input-validation-alert-component> {{'errors.required' | translate}} </app-input-validation-alert-component>
